--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="&#109;&#097;&#105;&#108;&#116;&#111;:info&#064victorcarreras.es" class="learn-more-btn">Enviar Correo</a>
+                  <a href="&#109;&#097;&#105;&#108;&#116;&#111;:victor_carreras2011&#hotmail.com" class="learn-more-btn">Enviar Correo</a>
                 </div>
               </div>
             </div>
