Update CV in main page

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
                   <h1 class="animated fadeInDown">VICTOR <span>CARRERAS</span></h1>
-                  <p class="animated fadeInUp delay-05s">Desarrollador Back End/<em>Seguridad Informática</em></p>
+                  <p class="animated fadeInUp delay-05s">Desarrollo de aplicaciones móviles/<em>Seguridad Informática</em>/Desarrollador Back End </p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="&#109;&#097;&#105;&#108;&#116;&#111;:victor_carreras2011@hotmail.com" class="learn-more-btn">Enviar Correo</a>
+                  <a href="mailto:victor_carreras2011@hotmail.com" class="learn-more-btn">Enviar Correo</a>
                 </div>
               </div>
             </div>
@@ -82,9 +82,10 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">Mi viaje hasta ahora</h1>
-                <p>Hola, soy Víctor Carreras, consultor en seguridad informática y desarrollador back-end de La Rioja, España. Certificado en Seguridad Informática por la Universidad Rey Juan Carlos de Madrid y Seguridad Informática
-                Práctica por la Universidad de Valencia. Durante el día, me encontrarás estudiando ingeniería informática en la Universidad Nacional de Educación a Distancia y por la noche, contribuyo en algunos proyectos GitHub, así como
-                en Stack Overflow y colaboro con diferentes compañías como Bug Reporter </p>
+                <p>Soy Víctor Carreras! Me defino como desarrollador de aplicaciones móviles, consultor en seguridad informática y desarrollador back-end de La Rioja, España. Certificado en Seguridad Informática por la Universidad Rey Juan Carlos de Madrid y Seguridad Informática
+                Práctica por la Universidad de Valencia. Además, también he realizado cursos como DFIR y Análisis Forense en Windows, DFIR y Análisis Forense en Redes, Flutter Development Bootcamp with Dart e iOS App Development Bootcamp entre otros. Durante el día,
+                  me encontrarás estudiando ingeniería informática en la Universidad Nacional de Educación a Distancia y trabajando en el desarrollo de aplicaciones móviles. Por la noche, contribuyo en algunos proyectos GitHub así como
+                en Stack Overflow y colaboro con diferentes compañías como Bug Reporter.</p>
               </div>
             </div>
           </div>
@@ -106,8 +107,8 @@
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
-                    <h2>Desarrollador</h2>
-                    <p>Los lenguajes de programación con los que estoy familiarizado son Java, Swift y Python. En tecnologías Web: PHP, JavaScript, AngularJS, MariaDB, JSP y un montón de frameworks</p>
+                    <h2>Desarrollo de aplicaciones</h2>
+                    <p>Tecnologías móviles: Swift, Objective-c, Java y Dart. Multiplataforma: Java y Python. Tecnologías Web: PHP, JavaScript, AngularJS, MariaDB y un montón de frameworks</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
                     <div class="icon">
